@@ -13,9 +13,12 @@
 #include "FileStoragePolicy.h"
 
 // Qt
+#include <QtCore/QBuffer>
+#include <QtCore/QDebug>
 #include <QtCore/QDir>
 #include <QtCore/QFile>
 #include <QtCore/QFileInfo>
+#include <QtGui/QImage>
 
 // Marble
 #include "MarbleDirs.h"
@@ -45,7 +48,7 @@ bool FileStoragePolicy::fileExists( const QString &fileName ) const
 bool FileStoragePolicy::updateFile( const QString &fileName, const QByteArray &data )
 {
     const QString fullName( m_dataDirectory + '/' + fileName );
-
+    QByteArray const * ptr = &data;
 
     // Create directory if it doesn't exist yet...
     QFileInfo info( fullName );
@@ -56,6 +59,19 @@ bool FileStoragePolicy::updateFile( const QString &fileName, const QByteArray &d
     if ( !QDir( localFileDirPath ).exists() )
         QDir::root().mkpath( localFileDirPath );
 
+    // convert images with format QImage::Format_Indexed8
+    QImage image;
+    QByteArray ba;
+    if ( image.loadFromData( data ) && image.format() == QImage::Format_Indexed8 ) {
+        qDebug() << "FileStoragePolicy::updateFile converting" << fullName;
+        QImage convertedImage = image.convertToFormat( QImage::Format_RGB32 );
+	qDebug() << "convertedImage.depth():" << convertedImage.depth();
+	QBuffer buffer( &ba );
+	buffer.open( QIODevice::WriteOnly );
+	convertedImage.save( &buffer );
+	ptr = &ba;
+    }
+
     // ... and save the file content
     QFile file( fullName );
     if ( !file.open( QIODevice::WriteOnly ) ) {
@@ -63,7 +79,7 @@ bool FileStoragePolicy::updateFile( const QString &fileName, const QByteArray &d
         return false;
     }
 
-    if ( !file.write( data ) ) {
+    if ( !file.write( *ptr ) ) {
         m_errorMsg = QString( "%1: %2" ).arg( fullName ).arg( file.errorString() );
         return false;
     }
